# rappter-plays-pokemon

./: .gitattributes  .gitignore  .story-archive  .warehouse  CONTRIBUTING.md  DATASET.md  DATA_LICENSE.md  LICENSE  README.md  SECURITY.md  STREAMING.md  bootstrap.sh  chat.sh  config.example.json  improve.sh  launch.sh  llms.txt  manifest.json  pokemon_agent.py  pyproject.toml  registry.json  story.sh  uninstall.sh  warehouse-manifest.json  warehouse.sh
.github/workflows/: ci.yml  story-warehouse.yml
api/v1/: dataset-card.json  manifest.json  status.json
docs/: index.html  site.css
docs/d/: diagnostics.css  diagnostics.js  index.html
docs/data/: data.css  data.js  index.html
docs/host/: host.css  index.html
docs/host/v2/: host.rpp-kite-v2.js  (+1 more)
docs/story/: index.html  story.css  story.js
docs/watch/: index.html  spectator.css  spectator.js
schemas/: execution-v1.schema.json  story-v1.schema.json
scripts/: build_pages_site.py  build_trystero_bundle.py  check_browser_js.py  kite_vtwin.js  provision_chrome_for_testing.py  stream_to_youtube.py  update_browser_assets.py
scripts/overlay/: overlay.html  package.json  run_forever.sh  stream_overlay.mjs
src/rappter_plays_pokemon/: __init__.py  chrome_for_testing.py  cli.py  improvement.py  install_agent.py  story.py  warehouse.py  youtube_chat.py
tests/: browser_contract_harness.js  conftest.py  diagnostics_contract_harness.js  host_contract_harness.js  kite_string_harness.js  manual_share_ux_harness.js  nostr_host_contract_harness.js  nostr_spectator_contract_harness.js  pairing_contract_harness.js  return_page_contract_harness.js  spectator_dashboard_harness.js  story_player_contract_harness.js  test_browser_js.py  test_chrome_for_testing.py  test_dashboard.py  test_improvement.py  test_kite_livestream.py  test_livestream.py  test_manual_return.py  test_nostr_signaling.py  test_pages_site.py  test_pokemon_agent.py  test_product.py  test_story.py  test_warehouse.py  test_youtube_chat.py  trystero_cleanup_harness.js
v1/: execution-receipts.jsonl  schema.sql  story.json
(+10 files in other folders)
